Fix for your cards and cards images. Wrapped the whole main part into a container-lg to preserve max-width of 1200px for big-screens, and center /rounded portfolio section

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -11,6 +11,10 @@ $font-family-base: Arial;
 
 // Add you custom CSS
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0px;
 }
@@ -24,14 +28,8 @@ body {
   padding-right: 1rem;
   padding-bottom: 1rem;
   border-radius: 0px;
-}
-
-.card.odd {
-  background-color: burlywood;
-}
-
-.card.even {
-  background-color: lightgrey;
+  background-color: transparent !important;
+  border: none;
 }
 
 .jumbotron {
@@ -39,6 +37,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 0rem;
+  text-align: center;
 }
 
 .display-4 {
@@ -49,6 +48,7 @@ body {
 .jumbotron-image {
   width: 10rem;
   flex-basis: 10rem;
+  border-radius: 50%;
 }
 
 .lead {
@@ -70,8 +70,13 @@ footer {
   align-self: center;
 }
 
-.card.contact {
+#contact,
+#about_me {
   background-color: burlywood;
+}
+.card.contact {
+  background-color: transparent;
+  border: none;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
@@ -150,5 +155,5 @@ details > ul {
   padding-top: 1rem;
   padding-left: 1rem;
   padding-bottom: 1rem;
-  margin-right: 0rem;
+  margin: auto;
 }
